--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,12 @@
-header {
-    background-color: red;
+
+
+li a {
+    text-decoration: none;
+    color: #008000;
+
 }
 
+a:hover {
+color: pink;
+}
 
