--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,12 +1,105 @@
-
-
-li a {
-    text-decoration: none;
-    color: #008000;
+body {
+    font-family: 'open sans', sans-serif;
 
 }
 
-a:hover {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap');
+
+
+body > header {
+    background-color: #808080;
+    padding: 5 px;
+    width: 100%;
+    top: 0;
+    position: fixed; /* Får backgrunden att fastna */
+}    
+body > header img {
+    height: 50px;
+}
+
+body > header nav {
+    float: right; /* Får menyn att lägga sig på höger sida */
+    margin-right: 20px;
+}
+
+
+
+body > header nav li {
+    float: left; /* få li att bli åt sidan */
+    margin-right: 20px;
+    list-style: none;
+
+}
+
+body > header nav li a {
+    text-decoration: none;
+    color: lightblue;
+}
+
+body > header nav li a:hover {
 color: pink;
 }
 
+body > section {
+    padding-top: 50px;
+    text-align: justify;
+
+}
+
+h1 {
+    font-size: 24px;
+}
+
+h2 {
+    font-size: 18px;
+}
+
+#home article {
+    width: 85%;
+    float: left;
+
+}
+
+#home aside {
+    width: 10%;
+    float: right;
+    padding: 0px 10px;
+    background-color: #2a2a2a;
+    color: #f7f7f7
+}
+#home article img {
+display: block;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 15px;
+}
+
+.margina {
+    margin-top: -100px;
+    text-align: center;
+}
+#images {
+    clear: both;
+
+}
+
+#images article {
+    text-align: center;
+}
+
+#images img {
+    max-width: 70%;
+}
+
+#contact {
+    margin:auto;
+    width: 205px;
+}
+
+#contact input [type='email'], #contact textarea {
+    width: 200px;
+}
+
+#about {
+    text-align: center;
+}
